view profile ui change

--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -31,3 +31,4 @@
 @import "components/timelines/base";
 @import "components/tooltips/base";
 @import "components/tree/base";
+@import "components/profile/base";
