--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -32,3 +32,4 @@
 @import "components/tooltips/base";
 @import "components/tree/base";
 @import "components/profile/base";
+@import "components/onboarding-documents/base";
