--- a/src/assets/components/onboarding-documents/_base.scss
+++ b/src/assets/components/onboarding-documents/_base.scss
@@ -26,9 +26,24 @@
 }
 
 .show-doc {
+    flex-wrap: wrap;
+    float: left;
     display: flex;
+    width: 100%;
 
     li {
-        flex: auto;
+        // flex: auto;
     }
+}
+
+.document-img {
+    height: 100px;
+    width: 100px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.img-card {
+    width: 50px;
+    height: 50px;
 }
