--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -33,3 +33,5 @@
 @import "components/tree/base";
 @import "components/profile/base";
 @import "components/onboarding-documents/base";
+@import "components/ir35_tax/base";
+
