added some UI changes

--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -34,4 +34,5 @@
 @import "components/profile/base";
 @import "components/onboarding-documents/base";
 @import "components/ir35_tax/base";
+@import "components/dashboard/base";
 
