--- a/src/assets/components/ir35_tax/_base.scss
+++ b/src/assets/components/ir35_tax/_base.scss
@@ -6,3 +6,11 @@
 .a-blue {
     color: blue !important;
 }
+
+.bg-color {
+    background-color: #1b233e !important;
+}
+
+.no-scroll {
+    overflow: hidden !important;
+}
