--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -234,3 +234,73 @@ ul {
 .no-scroll {
   overflow: hidden !important;
 }
+
+.mini-header {
+  background: #1b233e;
+  padding: 20px;
+  color: white;
+}
+
+.profile-menu {
+  width: calc(100vw - 415px) !important;
+  background: #ccc;
+}
+
+.profile-menu-card {
+  .MuiMenu-paper {
+    overflow: hidden !important;
+  }
+
+  .mini-profile-list {
+    height: calc(100vh - 250px);
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+}
+
+.card-header-profile {
+  padding: $card-spacer-y $card-spacer-x;
+  margin-bottom: 0; // Removes the default margin-bottom of <hN>
+  color: $card-cap-color;
+  background-color: $card-cap-bg;
+  border-bottom: $card-border-width solid $card-border-color;
+
+  .MuiTabs-indicator {
+    width: 146px !important;
+  }
+}
+
+.user-icon {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.profile-btn {
+  display: flex;
+  margin: 10px 0;
+  justify-content: center;
+
+  .btn-profile {
+    height: 20px;
+
+    button {
+      color: white;
+      font-size: 12px;
+    }
+
+    span {
+      padding: 4px !important;
+    }
+
+    .red {
+      background: red;
+      padding: 0;
+    }
+
+    .light-blue {
+      background: #289aa7;
+      padding: 0;
+    }
+  }
+}
