--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -9,6 +9,7 @@
 // Close button
 
 .close {
+
   &:active,
   &:focus {
     outline: none;
@@ -16,7 +17,7 @@
 }
 
 a {
-transition: color .2s;
+  transition: color .2s;
 }
 
 .z-over {
@@ -43,18 +44,23 @@ transition: color .2s;
   0% {
     transform: scale(.75);
   }
+
   20% {
     transform: scale(1.1);
   }
+
   40% {
     transform: scale(.75);
   }
+
   60% {
     transform: scale(1.05);
   }
+
   80% {
     transform: scale(.75);
   }
+
   100% {
     transform: scale(.75);
   }
@@ -129,13 +135,15 @@ body {
 // Sizing
 
 $num: 20;
+
 @while $num < 150 {
   .d-#{$num} {
     height: $num +0px !important;
     line-height: $num +0px !important;
     width: $num +0px !important;
   }
-  $num: $num + 10;
+
+  $num: $num+10;
 }
 
 // Line height
@@ -168,6 +176,10 @@ $num: 20;
 
 .h-100 {
   height: 100%;
+}
+
+.h-100px {
+  height: 100px;
 }
 
 .h-180px {
@@ -370,6 +382,7 @@ $num: 20;
 .p-top-a {
   top: auto !important;
 }
+
 .pos-r {
   left: auto;
   right: 0;
@@ -377,31 +390,31 @@ $num: 20;
 
 .hover-scale-sm {
   transition: $transition-base !important;
-  transform: scale(1)!important;
+  transform: scale(1) !important;
 
   &:hover {
-   transform: scale(1.08)!important;
+    transform: scale(1.08) !important;
   }
 }
 
 .hover-scale-rounded {
   transition: $transition-base !important;
-  transform: scale(1)!important;
+  transform: scale(1) !important;
   box-shadow: none;
 
   &:hover {
     @include border-radius($border-radius !important);
-    transform: scale(1.08)!important;
+    transform: scale(1.08) !important;
     box-shadow: $box-shadow-sm-light;
   }
 }
 
 .hover-scale-lg {
   transition: $transition-base !important;
-  transform: scale(1)!important;
+  transform: scale(1) !important;
 
   &:hover {
-   transform: scale(1.12) !important;
+    transform: scale(1.12) !important;
   }
 }
 
@@ -414,6 +427,7 @@ $num: 20;
 // Responsive rounded
 
 @include media-breakpoint-down(xl) {
+
   .rounded-right,
   .rounded-left {
     border-radius: 0 !important;
@@ -428,4 +442,12 @@ $num: 20;
 
 .nav-link {
   cursor: pointer;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.height-22px{
+  height: 22px;
 }
