parent to child send data

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -266,7 +266,7 @@ ul {
   border-bottom: $card-border-width solid $card-border-color;
 
   .MuiTabs-indicator {
-    width: 146px !important;
+    // width: 146px !important;
   }
 }
 
