mini profile changes

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -244,7 +244,7 @@ ul {
   }
 
   .profile-menu {
-    background: #ccc;
+    background: #eff1f9;
   }
 
   .mini-header {
@@ -313,7 +313,7 @@ ul {
     }
 
     .light-blue {
-      background: #289aa7;
+      background: #4191ff;
       padding: 0;
     }
   }
