--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -455,3 +455,11 @@ $num: 20;
 .pointer {
   cursor: pointer;
 }
+
+.font-10{
+  font-size: 10px;
+}
+
+.app-content--inner{
+  padding: 1rem !important;
+}
