header icon small

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -248,7 +248,7 @@ ul {
   }
 
   .mini-header {
-    background: #1b233e;
+    background: #253154;
     padding: 14px 20px;
     color: white;
   }
