--- a/src/assets/layout-components/Sidebar/themes/_dark.scss
+++ b/src/assets/layout-components/Sidebar/themes/_dark.scss
@@ -33,7 +33,7 @@
     }
 
     .ps__thumb-y {
-      background-color: rgba($black,.15) !important;
+      background-color: #ccc !important;
     }
   }
 }
