--- a/src/assets/components/login/_base.scss
+++ b/src/assets/components/login/_base.scss
@@ -1,37 +1,83 @@
-.fb-btn{
-  color: #fff;
-  background-color: #3b5999;
-  border-color: #3b5999;
-  padding: 4px 28px 4px 14px;
-  line-height: normal;
-  border-radius: 4.5rem;
-  text-shadow: 0 -1px 0 #354c8c;
-  border-right: #364e92 1px solid;
-  margin-left: 6px;
-  font-size: medium;
-  border-bottom: 0 !important;
-  .fa-facebook{
-    padding: 0 12px;
-  }
-}
+// .fb-btn{
+//   color: #fff;
+//   background-color: #3b5999;
+//   border-color: #3b5999;
+//   // padding: 4px 28px 6px 14px;
+//   line-height: normal;
+//   border-radius: 4.5rem;
+//   text-shadow: 0 -1px 0 #354c8c;
+//   border-right: #364e92 1px solid;
+//   margin-left: 6px;
+//   font-size: 12px;
+//   border-bottom: 0 !important;
+//   .fa-facebook{
+//     padding: 0 8px;
+//   }
+// }
 
-.gb-btn{
-  color: #fff !important;
-  background-color: #dd4b39 !important;
-  border-color: #dd4b39 !important;
-  padding: 0px 20px !important;
-  font-size: 14px !important;
-  line-height: normal;
-  border-radius: 4.5rem !important;
-  cursor: pointer !important;
-  margin-right: 6px;
+// .gb-btn{
+//   color: #fff !important;
+//   background-color: #dd4b39 !important;
+//   border-color: #dd4b39 !important;
+//   // padding: 0px 24px !important;
+//   font-size: 14px !important;
+//   line-height: normal;
+//   border-radius: 4.5rem !important;
+//   cursor: pointer !important;
+//   margin-right: 6px;
 
-  div{
-    background: #dd4b39 !important;
-    padding: 0px !important;
+//   div{
+//     background: #dd4b39 !important;
+//     padding: 0px !important;
+//   }
+//   span{
+//     padding: 7px 7px 7px 0px !important;
+//     font-size: 12px !important;
+//     font-weight: 700 !important;
+//   }
+// }
+
+.fb-g-c{
+
+  display: flex;
+  justify-content: center;
+  & > span {
+    display: inline-block;
+    margin: 5px !important;
+    padding: 5px 10px !important;
+    
+    outline: none;
+    flex-basis: 45%;
+    background-color: #3b5999 !important;
+    border-radius: 4.5rem !important;
+    .fb-btn {
+      margin: 0;
+      padding: 0;
+      background-color: transparent;
+      outline: 0;
+      border: 0;
+      color: white !important;
+      font-size: 14px;
+
+      i{
+        margin-right: 5px;
+      }
+    }
   }
-  span{
-    padding: 7px 7px 7px 0px !important;
-    font-size: medium !important;
+  .gb-btn {
+    margin: 5px !important;
+    padding: 5px 10px !important;
+    
+    outline: none;
+    flex-basis: 45%;
+    background-color: #dd4b39 !important;
+    justify-content: center;
+    box-shadow: none !important;
+    border-radius: 4.5rem !important;
+    & > span {
+      padding: 0 !important;
+      color: white !important;
+      font-weight: 600px;
+    }
   }
 }
