--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -315,6 +315,11 @@ ul {
   }
 }
 
+.card-header--title{
+  .MuiTab-wrapper{
+    text-transform: capitalize;
+  }
+}
 // For mobile
 @media (max-width: 767px) {
   .profile-menu {
