--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -320,6 +320,17 @@ ul {
     text-transform: capitalize;
   }
 }
+
+.profile-icon{
+    position: absolute !important;
+    left: 0 !important;
+    right: 0 !important;
+    justify-content: center !important;
+    margin: auto !important;
+    top: -65px !important;
+    border: 3px solid #4191ff;
+    padding: 5px;
+}
 // For mobile
 @media (max-width: 767px) {
   .profile-menu {
