--- a/src/assets/components/ir35_tax/_base.scss
+++ b/src/assets/components/ir35_tax/_base.scss
@@ -1,10 +1,44 @@
+.app-content--inner {
+    padding: 0 !important;
+}
+
+.app-footer {
+    display: none !important;
+}
+
+.ir35-background {
+    position: relative;
+    content: ' ';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../images/voxpro-images/ir35_background.jpeg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+}
+
+.img-bg {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #00000047;
+    z-index: 0;
+}
+
+.pt-80 {
+    padding-top: 80px;
+}
+
 .text-f {
     font-size: 17px;
     // font-weight: 700;
 }
 
 .a-blue {
-    color: blue !important;
+    color: #4191ff !important;
 }
 
 .bg-color {
@@ -13,4 +47,9 @@
 
 .no-scroll {
     overflow: hidden !important;
+}
+
+.ir35-logo {
+    width: 15%;
+    height: auto;
 }
