confirm account and other ui changes

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -170,7 +170,7 @@
           width: calc(100% - 105px);
 
           .MuiLinearProgress-bar {
-            background: #3fd2c4;
+            background: #070919;
           }
         }
 
