user online section issue fix

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -272,7 +272,7 @@ ul {
     border: 2px solid #ccc;
 
     .card-profile {
-      border-radius : unset !important;
+      border-radius: unset !important;
     }
   }
 }
@@ -315,22 +315,34 @@ ul {
   }
 }
 
-.card-header--title{
-  .MuiTab-wrapper{
+.card-header--title {
+  .MuiTab-wrapper {
     text-transform: capitalize;
   }
 }
 
-.profile-icon{
-    position: absolute !important;
-    left: 0 !important;
-    right: 0 !important;
-    justify-content: center !important;
-    margin: auto !important;
-    top: -65px !important;
-    border: 3px solid #4191ff;
-    padding: 5px;
+.profile-icon {
+  position: absolute !important;
+  left: 0 !important;
+  right: 0 !important;
+  justify-content: center !important;
+  margin: auto !important;
+  top: -65px !important;
+  border: 3px solid #4191ff;
+  padding: 5px;
 }
+
+.b-login-btn {
+  color: white !important;
+  margin: 0 !important;
+  border-radius: unset !important;
+  font-size: 14px !important;
+}
+
+#date-picker-inline {
+  color: #7a7b97;
+}
+
 // For mobile
 @media (max-width: 767px) {
   .profile-menu {
@@ -341,7 +353,8 @@ ul {
     left: 0;
     right: 0
   }
-  .m-top{
+
+  .m-top {
     margin-top: 20px;
   }
 }
@@ -352,7 +365,8 @@ ul {
     position: fixed;
     width: calc(100vw - 390px) !important;
   }
-  .m-top{
+
+  .m-top {
     margin-top: 0px;
   }
 }
