--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -454,10 +454,14 @@ $num: 20;
   cursor: pointer;
 }
 
-.font-10{
+.font-10 {
   font-size: 10px;
 }
 
-.app-content--inner{
+.app-content--inner {
   padding: 1rem !important;
+}
+
+.a-blue {
+  color: #4191ff !important;
 }
