alert issue fix

--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -465,3 +465,8 @@ $num: 20;
 .a-blue {
   color: #4191ff !important;
 }
+
+.Mui-disabled {
+  color: white !important;
+  background: #3c44b1 !important;
+}
