user avality menu width fix

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -56,10 +56,15 @@
 }
 
 
-.alertify-notifier .ajs-message {
-  background: rgba(255, 255, 255, 0.95);
-  color: #000;
-  text-align: center;
-  border: solid 1px #ddd;
-  border-radius: 2px;
+.date-picker {
+  .MuiIconButton-root {
+    padding: 0 !important;
+  }
+}
+
+.MuiPickersCalendarHeader-switchHeader {
+  .Mui-disabled {
+    color: #ccc !important;
+    background: white !important;
+  }
 }
