profile availablity issue fix and ir35 d-flex remove

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -341,7 +341,10 @@ ul {
 
 #date-picker-inline {
   color: #7a7b97;
+}
 
+.list-profile-available {
+  padding: 1px 7px 0px 12px !important;
 }
 
 // For mobile
