mini profile header click issue fix

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -235,8 +235,9 @@ ul {
   overflow: hidden !important;
 }
 
-
 .profile-menu-card {
+  z-index: 10 !important;
+
   .MuiMenu-paper {
     position: absolute;
     top: 78px !important;
