--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -470,3 +470,7 @@ $num: 20;
   color: white !important;
   background: #3c44b1 !important;
 }
+
+.sidebar-navigation-unset {
+  pointer-events: none !important;
+}
