--- a/src/assets/components/scrollable/_base.scss
+++ b/src/assets/components/scrollable/_base.scss
@@ -44,7 +44,7 @@
     position: absolute;
     z-index: 4;
     content: '';
-    background: linear-gradient(to bottom, rgba($white, 1) 20%, rgba($white, 0) 100%);
+    // background: linear-gradient(to bottom, rgba($white, 1) 20%, rgba($white, 0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$white', endColorstr='$white', GradientType=0);
   }
 
