--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -470,3 +470,35 @@ $num: 20;
   color: white !important;
   background: #3c44b1 !important;
 }
+
+.page-title {
+  display: block;
+  position: relative;
+  left: 5px;
+  padding: 10px 0;
+  height: 100px;
+
+  svg {
+    background: white;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    border-radius: 4px;
+    box-shadow: 0 0 0 3px #fff;
+  }
+
+  .title {
+    position: absolute;
+    top: 9px;
+    left: 70px;
+  }
+
+  .heading {
+    font-weight: 600;
+    margin-bottom: 4px;
+  }
+
+  p {
+    color: rgba(59, 62, 102, 0.5) !important;
+  }
+}
