--- a/src/assets/widgets/react-perfect-scrollbar/_base.scss
+++ b/src/assets/widgets/react-perfect-scrollbar/_base.scss
@@ -155,7 +155,7 @@
     position: absolute;
     z-index: 10;
     content: '';
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 0) 100%);
+    // background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=0);
   }
 
