--- a/src/assets/components/onboarding-documents/_base.scss
+++ b/src/assets/components/onboarding-documents/_base.scss
@@ -55,3 +55,30 @@
     width: 50px;
     height: 50px;
 }
+
+.float-right {
+    float: right!important;
+    margin-right: 20px!important;
+}
+.font-style {
+    font-size: 21px;
+}
+.card-h{
+    height: 28vh;
+}
+.text-center {
+    text-align: center;
+}
+
+.button {
+    display: block;
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    line-height: 25px;
+}
