Agency dashboard 2 ui change

--- a/src/assets/components/onboarding-documents/_base.scss
+++ b/src/assets/components/onboarding-documents/_base.scss
@@ -77,6 +77,16 @@
     height: 162px;
 }
 
+.city-card-bg {
+    background: #00000057;
+    position: absolute;
+    z-index: 999;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    top: 0;
+}
+
 .city-card {
     position: absolute;
     bottom: 0;
@@ -89,7 +99,7 @@
     text-align: center;
     width: 100%;
     align-content: center;
-    background-image: url('https://media.cntraveler.com/photos/5ca60f7f7b531a5e47949cde/master/w_4000,h_2400,c_limit/NYC_GettyImages-500619014.jpg');
+    // background-image: url('https://media.cntraveler.com/photos/5ca60f7f7b531a5e47949cde/master/w_4000,h_2400,c_limit/NYC_GettyImages-500619014.jpg');
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
