upload page change

--- a/src/assets/components/onboarding-documents/_base.scss
+++ b/src/assets/components/onboarding-documents/_base.scss
@@ -111,3 +111,11 @@
     right: 0;
     left: 0;
 }
+
+.date-pic {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
