--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -506,3 +506,11 @@ $num: 20;
 .color-white {
   color: white
 }
+
+.see-more {
+  position: absolute;
+  bottom: 12px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
