added stripe ui

--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -36,4 +36,5 @@
 @import "components/ir35_tax/base";
 @import "components/dashboard/base";
 @import "components/login/base";
+@import "components/subscription/base";
 
