--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -4,7 +4,8 @@
 
 // Fonts
 
-@import url('https://fonts.googleapis.com/css?family=Heebo:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:200,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,500,600,700,800&display=swap');
 
 // Widgets
 
