agency profile changes

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -348,6 +348,10 @@ ul {
   padding: 1px 7px 0px 12px !important;
 }
 
+.side-bg {
+  background: #253053cc !important;
+  color: #eaedf4 !important;
+}
 
 
 
