agency profile changes

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -353,6 +353,17 @@ ul {
   color: #eaedf4 !important;
 }
 
+.cb {
+  color: #000000;
+}
+.mtb {
+  margin-bottom: -10px !important;
+  margin-top: 15px !important;
+}
+.ht {
+  height: 0.6em !important;
+}
+
 
 
 
