reacr calender add

--- a/src/assets/_widgets.scss
+++ b/src/assets/_widgets.scss
@@ -13,3 +13,4 @@
 @import "widgets/react-circular-progressbar/base";
 @import "widgets/react-perfect-scrollbar/base";
 @import "widgets/hamburgers/base";
+@import 'react-calendar/dist/Calendar';
