--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -504,6 +504,32 @@ $num: 20;
   }
 }
 
+
+.react-calendar__navigation {
+  margin: 0 !important;
+  // .react-calendar__navigation__arrow {
+  //   display: none;
+  // }
+
+  .react-calendar__navigation__label {
+    // font-size: 32px;
+  }
+}
+
+.react-calendar__tile {
+  // height: 20px;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+  font-size: 10px;
+}
+
+.react-calendar__tile,
+.react-calendar__month-view__days__day {
+  font-size: 10px;
+}
+
+
 .color-white {
   color: white
 }
