IR-35 questions set

--- a/src/assets/components/ir35_tax/_base.scss
+++ b/src/assets/components/ir35_tax/_base.scss
@@ -46,3 +46,16 @@
     width: 15%;
     height: auto;
 }
+
+.fh {
+    font-size: 18px;
+}
+.fhh {
+    font-size: 22px !important;
+}
+.fhh {
+    font-size: 25px !important;
+}
+.button-width {
+    width: 18vh !important;
+}
