calender ui fix

--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -505,6 +505,10 @@ $num: 20;
 }
 
 
+.react-calendar {
+  border-radius: 5px;
+}
+
 .react-calendar__navigation {
   margin: 0 !important;
   // .react-calendar__navigation__arrow {
