--- a/src/assets/components/ir35_tax/_base.scss
+++ b/src/assets/components/ir35_tax/_base.scss
@@ -53,9 +53,16 @@
 .fhh {
     font-size: 22px !important;
 }
-.fhh {
-    font-size: 25px !important;
+.fhhh {
+    font-size: 30px !important;
 }
 .button-width {
-    width: 18vh !important;
+    width: 20vh !important;
+}
+.mt-10 {
+    margin-top: 11vh !important;
+}
+.angle {
+    margin-left: 4px;
+    margin-top: 4px;
 }
