--- a/src/assets/components/dashboard/_base.scss
+++ b/src/assets/components/dashboard/_base.scss
@@ -23,3 +23,18 @@
         }
     }
 }
+
+.h-125px {
+    height: 125px;
+}
+
+.weather {
+    position: relative;
+    color: green;
+
+    span {
+        position: absolute;
+        top: 0px;
+        font-size: 14px;
+    }
+}
