added changes in agency and candidate profile also in IR-35

--- a/src/assets/components/profile/_base.scss
+++ b/src/assets/components/profile/_base.scss
@@ -364,7 +364,12 @@ ul {
   height: 0.6em !important;
 }
 
-
+.card-bagdes-down {
+  position: absolute;
+  right: 0.75rem;
+  bottom: 0.75rem;
+  z-index: 2;
+}
 
 
 .profile-view-section {
