--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -587,3 +587,25 @@ $num: 20;
     margin-left: 10px;
   }
 }
+
+.range-meter {
+  // border: 1px solid #ccc;
+  // padding: 0 11px;
+  // border-radius: 20px;
+  // margin-top: 12px;
+  // height: 20px;
+  // position: absolute;
+  // width: 110%;
+  // top: -7px;
+  // left: -13px;
+
+  border: 1px solid #ccc;
+  height: 30px;
+  padding: 0 12px;
+  border-radius: 30px;
+  margin-top: 14px;
+
+  .MuiSlider-thumb {
+    background: #3d45b1 !important;
+  }
+}
