--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -541,7 +541,7 @@ $num: 20;
   font-size: 10px;
 }
 
-.task-calender {
+.task-calendar {
   background: #253053 !important;
 
   .react-calendar,
@@ -564,6 +564,28 @@ $num: 20;
 
 .color-white {
   color: white
+}
+
+.mt-12 {
+  margin-top: 12px;
+}
+
+.ml-14 {
+  margin-left: 14px;
+}
+
+.user-drop {
+  width: 145px;
+}
+
+.week-remove-m {
+  .MuiFormControlLabel-labelPlacementTop {
+    margin: 0 !important;
+  }
+
+  .MuiFormControlLabel-label {
+    font-weight: 700 !important;
+  }
 }
 
 .see-more {
