--- a/src/assets/_core.scss
+++ b/src/assets/_core.scss
@@ -18,3 +18,5 @@
 // Bootstrap base
 
 @import "widgets/helpers-utilities/base";
+@import 'react-big-calendar/lib/sass/styles';
+@import 'react-big-calendar/lib/addons/dragAndDrop/styles';
