--- a/src/assets/components/navigationmenus/_base.scss
+++ b/src/assets/components/navigationmenus/_base.scss
@@ -563,3 +563,9 @@ $nav-item-link-active-color:      $primary;
     }
 }
 
+.padd {
+    padding-left: 2px !important;
+    padding-right: 2px !important;
+    padding-bottom: 0px !important;
+    padding-top: 1px !important;
+}
