company dashboard adjustment

--- a/src/assets/components/dashboard/_base.scss
+++ b/src/assets/components/dashboard/_base.scss
@@ -34,7 +34,7 @@
 
 .divider-task {
     display: block;
-    border-left: 1px solid #eaeaea;
+    border-left: 3px solid #ccc;
     left: 15px;
     height: 300px;
     position: absolute;
