added candidate placements thing

--- a/src/assets/layout-blueprints/CollapsedSidebar/_base.scss
+++ b/src/assets/layout-blueprints/CollapsedSidebar/_base.scss
@@ -118,6 +118,14 @@
   }
 }
 
+.overflow-x {
+  overflow-x: auto;
+}
+
+.hid::-webkit-scrollbar {
+  display: none;
+}
+
 .sidebar-inner-layout-overlay {
   opacity: 0;
   visibility: hidden;
