company management ui

--- a/src/assets/_components.scss
+++ b/src/assets/_components.scss
@@ -37,4 +37,4 @@
 @import "components/dashboard/base";
 @import "components/login/base";
 @import "components/subscription/base";
-
+@import "components/agency-management/base";
