managemnt candidate ui changes and extra code remove

--- a/src/assets/core/utilities/_helpers.scss
+++ b/src/assets/core/utilities/_helpers.scss
@@ -709,3 +709,8 @@ select {
   border-left: 0;
   border: 1px solid #ccc;
 }
+
+tbody.scroll {
+  overflow: scroll !important;
+  display: block !important;
+}
