api call btn disable

--- a/src/assets/components/ir35_tax/_base.scss
+++ b/src/assets/components/ir35_tax/_base.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
-
+    padding: 24px;
 }
 
 .remove-p {
@@ -54,18 +54,23 @@
 .fh {
     font-size: 18px;
 }
+
 .fhh {
     font-size: 22px !important;
 }
+
 .fhhh {
     font-size: 30px !important;
 }
+
 .button-width {
     width: 20vh !important;
 }
+
 .mt-10 {
     margin-top: 11vh !important;
 }
+
 .angle {
     margin-left: 4px;
     margin-top: 4px;
